--- a/.gitignore
+++ b/.gitignore
@@ -1,129 +1,39 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+serverless
+venv
+__pycache__
 
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
+package-lock.json
+pylint-2.5.3.dist-info/
+pylint/
+requests-2.24.0.dist-info/
+requests/
+six-1.15.0.dist-info/
+six.py
+toml-0.10.1.dist-info/
+toml/
+typed_ast-1.4.1.dist-info/
+typed_ast/
+urllib3-1.25.10.dist-info/
+urllib3/
+wrapt-1.12.1-py3.7.egg-info/
+wrapt/
+    .gitignore
+.serverless/
+astroid-2.4.2.dist-info/
+astroid/
+bin/
+certifi-2020.6.20.dist-info/
+certifi/
+chardet-3.0.4.dist-info/
+chardet/
+colorama-0.4.3.dist-info/
+colorama/
+idna-2.10.dist-info/
+idna/
+isort-4.3.21.dist-info/
+isort/
+lazy_object_proxy-1.4.3.dist-info/
+lazy_object_proxy/
+mccabe-0.6.1.dist-info/
+mccabe.py
+node_modules/
