--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ribpl-bajaj-general-svc",
+  "name": "nibpl-bajaj-general-svc",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Real-Insurance-brokers-integration/ribpl-bajaj-general-svc.git"
+    "url": "git+https://github.com/Teammates-Insurance/timpl-bajaj-general-svc.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Real-Insurance-brokers-integration/ribpl-bajaj-general-svc/issues"
+    "url": "https://github.com/Teammates-Insurance/timpl-bajaj-general-svc/issues"
   },
-  "homepage": "https://github.com/Real-Insurance-brokers-integration/ribpl-bajaj-general-svc#readme",
+  "homepage": "https://github.com/Teammates-Insurance/timpl-bajaj-general-svc#readme",
   "devDependencies": {
     "serverless-offline": "^6.5.0",
     "sls": "^0.1.0"
